fixed missing userhome fonts on mobile

--- a/public/less/base-mobile.less
+++ b/public/less/base-mobile.less
@@ -25,6 +25,12 @@ html, body {
   overflow: hidden;
 }
 
+p {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
 a {
   text-decoration: none;
   color: #333;
